2004-12-14  Thomas Wolff  <towo@computer.org>

	* fhandler_console.cc (read): Consider offset within scrolling
	region of the console window.

2004-12-13  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.h (cwdstuff::get_drive): Release cwd_lock.

2004-12-12  Bas van Gompel  <cygwin-patch@bavag.tmfweb.nl>

	* fhandler.cc (fhandler_base::puts_readahead): Fix end-condition.

2004-12-10  Corinna Vinschen  <corinna@vinschen.de>

	* errno.cc (errmap): Map ERROR_INVALID_ADDRESS to EINVAL instead of
	EOVERFLOW.

2004-12-10  Christopher Faylor  <cgf@timesys.com>

	* include/sys/strace.h: Don't output paranoid_printf by default.

2004-12-09  Christopher Faylor  <cgf@timesys.com>

	* lib/libcmain.c (main): Properly deal with quoted first argument.

2004-12-06  Christopher Faylor  <cgf@timesys.com>

	* pinfo.h (proc_pipe::*): Delete class.
	* pinfo.cc (proc_pipe::*): Ditto.

2004-12-05  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (fork_parent): Reinstate "childhProc" protection.  Don't
	close hProcess handle here since it is used to ensure that a new
	process isn't created with the old pid after the old pid exits.
	* spawn.cc (spawn_guts): Ditto.
	* pinfo.cc (proc_waiter): Don't send any signals if we've execed since
	this process doesn't officially exist.
	* pinfo.h (pinfo::pid_handle): Eliminate.  Just use hProc.
	* sigproc.cc (sig_send): Don't send any signals if our sendsig doesn't
	exist.  That's a sign that we are execing.
	(remove_proc): Eliminate pid_handle close.

2004-12-05  Christopher Faylor  <cgf@timesys.com>

	* cygthread.h (cygthread::terminate_thread): Make public.
	* pinfo.h (pinfo::wait_thread): New element.
	* pinfo.cc (pinfo::wait): Store "handle" to started thread in pinfo.
	* sigproc.cc (proc_terminate): Kill any threads waiting for a process
	pipe.

2004-12-05  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (mychild): Reimplement as list scan.
	(proc_subproc): Don't mess with pinfo if it's myself.
